# origin

./: AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_MODEL.md  README.md  SECURITY.md  rust-toolchain.toml
.cargo/: audit.toml  config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  governance.toml
.github/scripts/: detect_changes.sh  publish_component_descriptor.sh
.github/workflows/: ci.yml  delivery-dev.yml  docs-security-book.yml  governance.yml  promote-release.yml  publish-security-book.yml  release-candidate.yml  security-fuzz.yml  security.yml
agents/runtime/: Cargo.toml
docs/architecture/: layer-boundaries.md
docs/process/: github-actions-supply-chain.md  github-governance-rollout.md  pr-conflict-reduction-playbook.md  ui-system-refactor-issue-drafts.md  wasmcloud-local-dev.md
docs/security-rust/: CONTRIBUTING.md  DISCLOSURE.md  README.md  ROADMAP.md
docs/security-rust/examples/wasm-sandboxing/: Cargo.toml
docs/security-rust/examples/wasm-sandboxing/src/: main.rs
enterprise/ontology/: entities.json  relationships.json
infrastructure/pulumi/: README.md  package-lock.json  package.json
plans/130-ui-framework-modernization/: EXEC_PLAN.md  task-contract.json
platform/runtime/platform-gateway/: Cargo.toml
platform/runtime/platform-gateway/src/: lib.rs
schemas/crates/contracts/: Cargo.toml  build.rs
schemas/crates/contracts/src/: lib.rs  weather.rs
schemas/crates/contracts/tests/: boundary_catalog.rs  weather_contracts.rs
services/approval-service/: Cargo.toml
services/engineering-service/: Cargo.toml
services/evidence-service/: Cargo.toml
services/finance-service/: Cargo.toml
services/governance-service/: Cargo.toml
services/governance-service/src/: lib.rs
services/knowledge-service/: Cargo.toml
services/market-data-service/: Cargo.toml
services/quant-research-service/: Cargo.toml
services/security-service/: Cargo.toml
services/security-service/src/: component.rs  lib.rs
shared/error-model/: Cargo.toml
shared/evidence-sdk/: Cargo.toml
shared/exploit-mitigation/: Cargo.toml
shared/governed-storage/: Cargo.toml
shared/identity/: Cargo.toml
shared/policy-sdk/: Cargo.toml
shared/runtime-security/: Cargo.toml
shared/runtime-security/src/: lib.rs
shared/runtime-security/tests/: runtime_security.rs
shared/secure-patterns/: Cargo.toml
shared/security-instrumentation/: Cargo.toml
shared/security-instrumentation/src/: lib.rs
shared/security-instrumentation/tests/: correlation.rs
shared/surrealdb-access/: Cargo.toml
testing/: contract_parity.rs
testing/security-labs/: README.md
testing/security-labs/runtime-security/: Cargo.toml  README.md  manifest.toml
testing/security-labs/runtime-security/fixtures/: busy-loop.wat  guest-invalid-json.wat  oversized-state-id.txt
testing/security-labs/runtime-security/src/: lib.rs
testing/security-labs/runtime-security/tests/: runtime_security.rs
ui/: README.md
ui/crates/apps/terminal/: Cargo.toml
ui/crates/apps/terminal/src/: lib.rs
ui/crates/desktop_runtime/: Cargo.toml  build.rs
ui/crates/desktop_runtime/compat_manifests/: system.calculator.app.manifest.toml  system.dialup.app.manifest.toml  system.explorer.app.manifest.toml  system.notepad.app.manifest.toml  system.ui-showcase.app.manifest.toml
ui/crates/desktop_runtime/src/: app_runtime.rs  apps.rs  components.rs  effect_executor.rs  host.rs  lib.rs  model.rs  persistence.rs  reducer.rs  runtime_context.rs  shell.rs  window_manager.rs
ui/crates/desktop_runtime/src/apps/: placeholders.rs
ui/crates/desktop_runtime/src/components/: a11y.rs  menus.rs  taskbar.rs  taskbar_input.rs  window.rs
ui/crates/desktop_runtime/src/host/: boot.rs  host_ui.rs  persistence_effects.rs
ui/crates/desktop_runtime/src/origin_shell/: launcher.rs
ui/crates/desktop_runtime/src/reducer/: appearance.rs
ui/crates/desktop_runtime/src/shell/: policy.rs
ui/crates/desktop_runtime/src/shell/commands/: apps.rs  config.rs  filesystem.rs  inspect.rs  mod.rs  windows.rs  workflow.rs
ui/crates/desktop_tauri/: Cargo.toml  tauri.conf.json
ui/crates/desktop_tauri/src/: cache.rs  lib.rs  prefs.rs
ui/crates/platform_host_web/: Cargo.toml
ui/crates/platform_host_web/src/: adapters.rs  cross_context.rs  file_access.rs  lib.rs  navigation.rs  notifications.rs  persistence.rs  pwa.rs
ui/crates/platform_host_web/src/bridge/: mod.rs
ui/crates/platform_host_web/src/bridge/interop/: mod.rs  non_wasm.rs  wasm.rs
ui/crates/platform_host_web/src/storage/: local_prefs.rs  tauri_prefs.rs
ui/crates/system_ui/: Cargo.toml  build.rs
ui/crates/system_ui/src/: foundation.rs  icon.rs  lib.rs
ui/crates/system_ui/src/origin_components/: actions.rs  mod.rs  navigation.rs  shell.rs  windowing.rs
ui/crates/system_ui/src/origin_primitives/: controls.rs  data.rs  layout.rs  mod.rs  surfaces.rs  typography.rs  window.rs
ui/crates/system_ui/src/origin_tokens/: mod.rs  schema.rs
ui/crates/system_ui/tokens/: tokens.toml
ui/docs/: liquid-glass-refactor-report.md
ui/e2e/: package-lock.json  package.json  playwright.config.js  wasm_sri_smoke.cjs
workflows/access_review/: workflow.boundary.toml
workflows/compliance_attestation/: workflow.boundary.toml
workflows/continuity_activation/: workflow.boundary.toml
workflows/contract_lifecycle/: workflow.boundary.toml
workflows/control_testing/: workflow.boundary.toml
workflows/disaster_recovery_test/: workflow.boundary.toml
workflows/engine/: workflow.boundary.toml
workflows/release_approval/: Cargo.toml  workflow.boundary.toml
workflows/release_approval/src/: component.rs  lib.rs
workflows/release_approval/tests/: release_approval.rs
workflows/treasury_disbursement/: Cargo.toml  workflow.boundary.toml
workflows/treasury_disbursement/src/: component.rs  lib.rs
workflows/treasury_disbursement/tests/: treasury_disbursement.rs
xtask/: Cargo.toml
xtask/src/: architecture.rs  delivery.rs  github.rs  infra.rs  lib.rs  main.rs  security_book.rs  ui_e2e.rs  ui_hardening.rs
xtask/tests/: orchestration.rs
(+198 files in other folders)
