[package]
name = "xtask"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
codegen = { path = "../schemas/crates/codegen" }
component-descriptors = { path = "../platform/wasmcloud/component-descriptors" }
lattice-config = { path = "../platform/wasmcloud/lattice-config" }
regex = "1.12.2"
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3.20.0"

[lints]
workspace = true
