[package]
name = "xtask"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
lattice-config = { path = "../platform/wasmcloud/lattice-config" }
regex = "1.12.2"
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[lints]
workspace = true
