[package]
name = "governance-service"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
contracts = { path = "../../schemas/crates/contracts" }
enforcement = { path = "../../platform/runtime/enforcement" }
error-model = { path = "../../shared/error-model" }
identity = { path = "../../shared/identity" }

[dev-dependencies]
toml.workspace = true

[lints]
workspace = true
