[package]
name = "runtime-security"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
contracts = { path = "../../schemas/crates/contracts" }
serde.workspace = true
serde_json.workspace = true
strategy-sandbox = { path = "../../platform/runtime/strategy-sandbox" }
thiserror.workspace = true
wasmcloud-bindings = { path = "../../platform/wasmcloud/bindings" }

[dev-dependencies]
chrono.workspace = true
trading-core = { path = "../trading-core" }
trading-errors = { path = "../trading-errors" }

[lints]
workspace = true
