[package]
name = "security-instrumentation"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
contracts = { path = "../../schemas/crates/contracts" }
serde.workspace = true
telemetry = { path = "../telemetry" }

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
