[package]
name = "platform-gateway"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
approval-service = { path = "../../../services/approval-service" }
component-descriptors = { path = "../../wasmcloud/component-descriptors" }
contracts = { path = "../../../schemas/crates/contracts" }
engineering-service = { path = "../../../services/engineering-service" }
error-model = { path = "../../../shared/error-model" }
events = { path = "../../../schemas/crates/events" }
evidence-service = { path = "../../../services/evidence-service" }
futures = "0.3"
hex.workspace = true
identity = { path = "../../../shared/identity" }
lattice-config = { path = "../../wasmcloud/lattice-config" }
orchestrator = { path = "../orchestrator" }
policy-service = { path = "../../../services/policy-service" }
sdk-rs = { path = "../../sdk/sdk-rs" }
security-service = { path = "../../../services/security-service" }
serde_json.workspace = true
sha2.workspace = true
release-approval = { path = "../../../workflows/release_approval" }

[dev-dependencies]
chrono.workspace = true
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
