[package]
name = "contracts"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
identity = { path = "../../../shared/identity" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[build-dependencies]
serde = { workspace = true, features = ["derive"] }
toml.workspace = true

[lints]
workspace = true
