[package]
name = "desktop_runtime"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[features]
default = ["csr"]
csr = [
  "leptos/csr",
  "desktop_app_contract/csr",
  "desktop_app_control_center/csr",
  "desktop_app_terminal/csr",
  "desktop_app_settings/csr",
]
desktop-tauri = ["csr"]

[dependencies]
desktop_app_contract = { path = "../desktop_app_contract", default-features = false }
desktop_app_control_center = { path = "../apps/control_center", default-features = false }
desktop_app_terminal = { path = "../apps/terminal", default-features = false }
desktop_app_settings = { path = "../apps/settings", default-features = false }
futures.workspace = true
js-sys = "0.3"
leptos = { version = "0.6", default-features = false }
nu-ansi-term = { version = "0.50.3", default-features = false }
nu-protocol = { version = "0.110.0", default-features = false }
nu-table = { version = "0.110.0", default-features = false }
platform_host = { path = "../platform_host" }
platform_host_web = { path = "../platform_host_web", default-features = false }
sdk-rs = { path = "../../../platform/sdk/sdk-rs" }
serde.workspace = true
serde_json.workspace = true
system_ui = { path = "../system_ui", default-features = false }
system_shell = { path = "../system_shell" }
system_shell_contract = { path = "../system_shell_contract" }
tabled = { version = "0.20", default-features = false, features = ["ansi"] }
thiserror.workspace = true
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "KeyboardEvent", "MouseEvent", "PointerEvent", "Storage", "Window"] }

[dev-dependencies]
pretty_assertions = "1"

[build-dependencies]
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
