[package]
name = "desktop_tauri"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true
description = "Tauri desktop shell host for the Origin OS Leptos runtime."

[[bin]]
name = "desktop_tauri"
path = "src/main.rs"
test = false

[build-dependencies]
tauri-build = { version = "2", default-features = false, features = ["config-json"] }

[dependencies]
platform_host = { path = "../platform_host" }
serde_json.workspace = true
tauri = { version = "2", default-features = false, features = ["common-controls-v6", "compression", "dynamic-acl", "wry", "x11"] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
