[package]
name = "platform_host_web"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[features]
default = []
desktop-host-stub = []
desktop-host-tauri = []

[dependencies]
futures.workspace = true
js-sys = "0.3"
platform_host = { path = "../platform_host" }
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Blob", "BroadcastChannel", "Document", "Event", "File", "FileList", "FileReader", "HtmlElement", "HtmlInputElement", "MessageEvent", "Notification", "ProgressEvent", "Storage", "StorageManager", "Url", "Window"] }

[dev-dependencies]
