[package]
name = "system_ui"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true
build = "build.rs"

[features]
default = ["csr"]
csr = ["leptos/csr"]

[dependencies]
leptos = { version = "0.6", default-features = false }
serde.workspace = true

[build-dependencies]
serde.workspace = true
toml = "0.8"

[dev-dependencies]
toml = "0.8"
trybuild = "1"
