[package]
name = "desktop_app_terminal"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[features]
default = ["csr"]
csr = ["leptos/csr", "desktop_app_contract/csr"]

[dependencies]
desktop_app_contract = { path = "../../desktop_app_contract", default-features = false }
leptos = { version = "0.6", default-features = false }
platform_host = { path = "../../platform_host" }
serde.workspace = true
serde_json.workspace = true
system_ui = { path = "../../system_ui", default-features = false }
system_shell_contract = { path = "../../system_shell_contract" }
web-sys = { version = "0.3", features = ["HtmlElement"] }
